fix: remove scrollbar

--- a/src/components/WordsListItem/WordsListItem.css
+++ b/src/components/WordsListItem/WordsListItem.css
@@ -29,7 +29,7 @@
 
 .WordsListItem__tableWrapper {
 	width: auto;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .WordsListItem__listItem:hover .WordsListItem__delete {
